--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,7 +79,8 @@
             android:layout_marginTop="30dp"
             android:background="#3490F0"
             android:text="平移"
-            android:textColor="#fff"/>
+            android:textColor="#fff"
+            android:layout_marginBottom="50dp"/>
     </RelativeLayout>
 
 </ScrollView>
