--- a/app/src/main/res/layout/object_layout.xml
+++ b/app/src/main/res/layout/object_layout.xml
@@ -15,14 +15,24 @@
             android:layout_height="100dp"
             android:text="开始动画"/>
 
+
         <ImageView
-            android:id="@+id/img1"
+            android:id="@+id/vip"
             android:layout_width="200dp"
             android:layout_height="100dp"
-            android:layout_marginTop="300dp"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="300dp"
             android:src="@drawable/vip"/>
+
+        <ImageView
+            android:id="@+id/fire"
+            android:layout_width="40dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="175dp"
+            android:layout_marginLeft="45dp"
+            android:layout_alignLeft="@id/vip"
+            android:src="@drawable/fire"/>
 
     </RelativeLayout>
 
