--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         >
 
         <LinearLayout
-            android:id="@+id/turn"
+            android:id="@+id/turn1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -21,46 +21,69 @@
 
             <Button
                 android:id="@+id/paint"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
                 android:text="LView"
 
                 android:textColor="#000000"/>
 
             <Button
                 android:id="@+id/wuziqi"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
                 android:text="五子棋View"
                 android:textColor="#000000"
                 android:textSize="12sp"/>
 
             <Button
                 android:id="@+id/ges"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
                 android:text="属性动画"
                 android:textColor="#000000"
                 android:textSize="12sp"/>
 
             <Button
                 android:id="@+id/circle"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="90dp"
+                android:layout_marginLeft="5dp"
                 android:text="CircleView"
                 android:textColor="#000000"
                 android:textSize="12sp"/>
 
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/turn2"
+            android:layout_below="@id/turn1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:clipChildren="false">
+
+
             <Button
                 android:id="@+id/draw"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_marginLeft="10dp"
                 android:text="Drawable"
+                android:textColor="#000000"
+                android:textSize="12sp"/>
+
+            <Button
+                android:id="@+id/hori"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="10dp"
+                android:text="HSSView"
                 android:textColor="#000000"
                 android:textSize="12sp"/>
 
@@ -69,7 +92,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/turn"
+            android:layout_below="@id/turn2"
             android:layout_marginBottom="50dp">
 
             <Button
