--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="light_green">#33c433</color>
+    <color name="black">#000000</color>
+    <color name="gray">#f9a4a3a3</color>
 </resources>
