--- a/app/src/main/res/layout/object_layout.xml
+++ b/app/src/main/res/layout/object_layout.xml
@@ -2,6 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#fff"
     android:layout_height="wrap_content">
 
     <RelativeLayout
